<resources>
    <string name="app_name">CVapp</string>
    <string name="text_first_name">First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="hint_first_name">Enter first name</string>
    <string name="hint_last_name">Enter last name</string>
    <string name="button_save">Save</string>
    <string name="label_add_cv">Add new CV</string>
    <string name="text_address">Address</string>
    <string name="text_study">Studies</string>
    <string name="label_add_study">Add new study</string>
    <string name="label_add_driving_license">Add new driving license</string>
    <string name="text_driving_license">Driving licenses</string>
    <string name="label_add_language">Add new language</string>
    <string name="text_language">Languages</string>
    <string name="label_add_hobby">Add new hobby</string>
    <string name="text_hobby">Hobbies</string>
    <string name="label_add_experience">Add new experience</string>
    <string name="text_experience">Experiences</string>
    <string name="text_country">Country</string>
    <string name="text_zip_code">ZIP code</string>
    <string name="text_state">State</string>
    <string name="text_city">City</string>
    <string name="text_street">Street</string>
    <string name="text_house_number">House number</string>
    <string name="text_phone_number">Phone number</string>
    <string name="text_email_address">E-mail address</string>
    <string name="text_gender">Gender</string>
    <string name="text_birth_date">Birth date</string>
    <string name="text_nationality">Nationality</string>
    <string name="text_native_language">Native language</string>
    <string name="button_update">Update</string>
    <string name="label_update_cv">Update CV</string>
    <string name="text_update">Update</string>
    <string name="text_delete">Delete</string>
    <string name="label_update_driving_license">Update driving license</string>
    <string name="label_update_experience">Update experience</string>
    <string name="label_update_hobby">Update hobby</string>
    <string name="label_update_language">Update language</string>
    <string name="label_update_study">Update study</string>
    <string name="text_driving_license_type">Type</string>
    <string name="text_hobby_name">Hobby</string>
    <string name="text_language_name">Language</string>
    <string name="text_position">Position</string>
    <string name="text_company">Company</string>
    <string name="text_start_date">Start date</string>
    <string name="text_end_date">End date</string>
    <string name="text_study_name">Study name</string>
    <string name="text_school">School</string>
    <string name="text_description">Description</string>
    <string name="text_search">Search</string>
</resources>
